# fugacious

./: .gitignore  CHANGELOG.md  Dockerfile  Fugacious.lw  LICENSE  Makefile  README.md  fugacious.cabal  fugacious.yaml.dev  fugacious.yaml.prod  stack.yaml
assets/: style.css
deploy/: AppCluster.lw  Fugacious.lw  NotificationQueue.lw
lib/Data/ByteString/Char8/: Extended.hs
lib/Data/Either/: Fail.hs
lib/Data/MBox/: Extended.hs
lib/Fugacious/: Database.hs  Logger.hs  MailQueue.hs  ParseMail.hs  User.hs  Web.hs
lib/Fugacious/MailQueue/: Amazon.hs  Internal.hs  Spool.hs
lib/Fugacious/Main/: Sendmail.hs  Server.hs
lib/Fugacious/Web/: Routes.hs  Views.hs
lib/Network/: QuotedPrintable.hs
lib/Snap/Core/: Extended.hs
lib/System/FileLock/: Extended.hs
src/fugacious-sendmail/: Main.hs
src/fugacious-server/: Main.hs
